# PhotoHarbor

./: .gitignore  .hintrc  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
.claude/: settings.json
.github/workflows/: build.yml
agents/: agents.md  claude.md
flatpak/: com.kei.photosync.desktop  com.kei.photosync.yml  com.photoharbor.app.desktop  com.photoharbor.app.yml
scripts/: build-windows.sh  clean_builds.sh  prepare-sidecar.js
src/: app.js  log-parsers.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
